--- a/public/index.html
+++ b/public/index.html
@@ -8,34 +8,47 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<!--[if IE 7]><html lang="ko" class="ie7"><![endif]-->
 	<!--[if IE 8]><html lang="ko" class="ie8"><![endif]-->
-	<meta name="apple-mobile-web-app-title" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="apple-mobile-web-app-title" content="기본">
 	<title>기본</title>
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon144x144.png" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	<script type="text/javascript">
 	//<![CDATA[
 	//]]>
 	</script>
 	<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
-	<!--[if lte IE 8]>
+	<!--[if lt IE 9]>
 	<script type="text/javascript" src="js/html5.js"></script>
+	<script type="text/javascript" src="js/respond.js"></script>
 	<![endif]-->
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/jquery.bxslider.js"></script>
 	<script type="text/javascript" src="js/ux.js"></script>
 </head>
 <body>
+	<!-- skipToContent -->
+	<div id="skipToContent">
+		<a href="#container">본문으로 바로가기</a>
+		<a href="#gnb">메뉴 바로가기</a>
+	</div>
+	<!-- //skip_navi -->
 	<!-- allwrap -->
 	<div class="allwrap" id="allwrap">
 		<!-- header -->
 		<header id="header" class="header">
+			<nav id="gnb" class="gnb">
+			</nav>
 		</header>
 		<!-- header -->
 		<!-- container -->
-		<section class="container" id="container"></section>
+		<section class="container" id="container">
+		</section>
 		<!-- container -->
 		<!-- footer -->
-		<footer id="footer" class="footer"></footer>
+		<footer id="footer" class="footer">
+		</footer>
 		<!-- footer -->
 	</div>
 	<!-- //allwrap -->
