--- a/public/index.html
+++ b/public/index.html
@@ -38,16 +38,40 @@
 	<div class="allwrap" id="allwrap">
 		<!-- header -->
 		<header id="header" class="header">
+			<h1 class="logo">logo</h1>
+			<!-- gnb -->
 			<nav id="gnb" class="gnb">
+				<h2 class="skip">메인메뉴</h2>
+				<ul class="clear clearfix">
+					<li><a href="">주메뉴1</a></li>
+					<li><a href="">주메뉴2</a></li>
+					<li><a href="">주메뉴3</a></li>
+				</ul>
 			</nav>
+			<!-- //gnb -->
 		</header>
 		<!-- header -->
+		<hr />
 		<!-- container -->
-		<section class="container" id="container">
-		</section>
+		<div class="container" id="container">
+			<section class="content" id="content">
+			</section>
+		</div>
 		<!-- container -->
+		<hr />
 		<!-- footer -->
 		<footer id="footer" class="footer">
+			<!-- f_gnb -->
+			<nav class="f_gnb">
+				<ul class="clear clearfix">
+					<li><a href="">개인정보처리방침</a></li>
+				</ul>
+			</nav>
+			<!-- //f_gnb -->
+			<address>
+				<p>주소</p>
+				<p class="copyright">Copyright ⓒ by 000. All rights reserved.</p>
+			</address>
 		</footer>
 		<!-- footer -->
 	</div>
