--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
 		<!-- container -->
 		<div class="container" id="container">
 			<section class="content" id="content">
+				<input type="text" class="datepicker" placeholder="날짜입력" />
 			</section>
 		</div>
 		<!-- container -->
