--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,17 @@
 		<!-- container -->
 		<div class="container" id="container">
 			<section class="content" id="content">
-				<input type="text" class="datepicker" placeholder="날짜입력" />
+				<form action="">
+					<legend>폼 제목</legend>
+					<fieldset>
+					<a href="javascript:;" title="툴팁툴팁" class="tooltip">tooltip</a>
+					<input type="text" size="20" class="datepicker" placeholder="날짜입력" />
+					<span class="chk_area"><span class="tit">체크</span><label for="chk"></label><input type="checkbox" name="chk" id="chk" /></span>
+					<select name="" id="" width="20">
+						<option value="">선택하세요</option>
+					</select>
+					</fieldset>
+				</form>
 			</section>
 		</div>
 		<!-- container -->
