--- a/public/index.html
+++ b/public/index.html
@@ -64,11 +64,12 @@
 					<select name="" id="" width="20">
 						<option value="">선택하세요</option>
 					</select>
+					<label for="#">text </label>
 					</fieldset>
 				</form>
 			</section>
 		</div>
-		<!-- container -->
+		<!-- //container -->
 		<hr />
 		<!-- footer -->
 		<footer id="footer" class="footer">
